--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+/.idea/workspace.xml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
